# factored-medical-qa-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  start_services.ps1
app/: App.py
app/pages/: Project_Documentation.py  Usage_Examples.py
docs/: challenge_description.md
notebooks/: exploratory_data_analysis.ipynb  model_evaluation.ipynb
reports/run_1/: evaluation_20250725_101157.md  training_20250725_092413.md
reports/run_2/: evaluation_20250725_090125.md
reports/run_3/: evaluation_20250725_112140.md  train_log.txt
reports/run_4/: evaluation_20250725_134121.md  evaluation_20250725_144114.md  main_log_20250725_133834.txt  main_log_20250725_134447.txt  main_log_20250725_134816.txt
reports/run_5/: evaluation_20250725_160556.md  evaluation_20250725_165933.md  evaluation_20250725_185257.md  evaluation_20250725_213835.md  evaluation_20250725_222251.md  evaluation_20250725_222838.md
reports/run_6/: evaluation_20250725_232518.md  retriever_evaluation_20250725_233843.md
src/: api.py  config.py  download_data.py  evaluate.py  evaluate_retriever.py  logger.py  main.py  prepare_train_data.py  prepare_vector_database.py  train.py
